# SpotSign

./: .gitignore  Cargo.toml  README.md  encode.js  index.html  index.js  package.json  webpack.config.js
api/: .eslintrc.js  .prettierrc.js  claudia.json  package.json  tsconfig.json
api/@types/claudia-api-builder/: index.d.ts
api/src/: app.ts
api/src/handlers/: proxy.ts
demo/: index.html  index.js  package.json  webpack.config.js
extension/: .eslintrc.js  .prettierrc.js  manifest.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
extension/addon/: browser.d.ts  manifest.json  signer.d.ts
extension/addon/background/: index.ts
extension/addon/background_scripts/: background.js  index.js  index.ts
extension/addon/content/: index.ts  sign.ts  strip.ts  util.ts  verify.ts
extension/addon/content_scripts/: content.js  index.js  index.ts
extension/addon/lib/: encode.ts  messages.js  messages.ts  never.ts  sign.ts  signer.ts
extension/addon/popup/: index.html  index.js  index.ts  index.tsx  popup.html  popup.js
extension/addon/popup/components/: Author.tsx  Content.tsx  Keys.tsx  Popup.tsx  Signature.tsx
extension/addon/popup/components/Identity/: IdentityDisplay.tsx  IdentityEdit.tsx  IdentityKeys.tsx  (+2 more)
extension/addon/popup/state/: actions.ts  content.tsx  index.tsx  keys.tsx  signature.tsx
extension/background_scripts/: background.js
extension/content_scripts/: content.js
extension/lib/: encode.js
extension/popup/: popup.css  popup.html  popup.js
signer/: Cargo.toml
signer/src/: lib.rs
src/: lib.rs
