[package]
name = "spot_sign"
version = "0.1.0"
authors = ["jaredlockhart"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "1.0.0-pre.1"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.52"
console_error_panic_hook = "0.1.6"
base64 = "0.11.0"
js-sys = "0.3.29"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.clear_on_drop]
features = ["nightly"]

[profile.release]
debug = true
